--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,29 @@
       "php": ">=7.0",
       "kalnoy/nestedset": "^5.0",
       "jenssegers/date": "^4.0"
+    },
+    "autoload": {
+      "psr-4": {
+        "Creativminds\\Comment\\": "src"
+      }
+    },
+    "autoload-dev": {
+      "psr-4": {
+        "Creativminds\\Comment\\Test\\": "tests"
+      }
+    },
+    "extra": {
+      "laravel": {
+        "providers": [
+          "Creativminds\\Comment\\CommentServiceProvider"
+        ],
+        "aliases": {
+          "Comment": "Creativminds\\Comment\\Facades\\Comment"
+        }
+      }
+    },
+    "require-dev": {
+      "orchestra/testbench": "~3.0",
+      "phpunit/phpunit": "^7"
     }
 }
